Added new solutions